--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/timer.css">
+    <link rel="stylesheet" href="style/deco.css">
 </head>
+
 <body>
-    🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎊🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉
+    <!-- <div class="container">
+        <div class="components" id="components"> -->
+            <div id="root"></div>
+            <div class="clock">
+                <div class="hand hours"></div>
+                <div class="hand minutes"></div>
+                <div class="hand seconds"></div>
+                <div class="point"></div>
+                <div class="marker">
+                    <span class="marker__1"></span>
+                    <span class="marker__2"></span>
+                    <span class="marker__3"></span>
+                    <span class="marker__4"></span>
+                </div>
+            </div>
+            <!-- the dayly circle -->
+            <!-- <div class="circle">
+                <span class="circle__btn"></span>
+                <span class="circle__back-1"></span>
+                <span class="circle__back-2"></span>
+            </div> -->
+
+            <div class="icon" id="Gsteps">
+                <!-- <div class="icon__home">
+                    <p>1</p><br><br><br><br>
+                </div> -->
+            </div>
+        <!-- </div>
+    </div> -->
+    <script src="js/deco.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/timer.js"></script>
 </body>
+
 </html>
