--- a/index.html
+++ b/index.html
@@ -11,35 +11,48 @@
 </head>
 
 <body>
-    <!-- <div class="container">
-        <div class="components" id="components"> -->
-            <div id="root"></div>
-            <div class="clock">
-                <div class="hand hours"></div>
-                <div class="hand minutes"></div>
-                <div class="hand seconds"></div>
-                <div class="point"></div>
-                <div class="marker">
-                    <span class="marker__1"></span>
-                    <span class="marker__2"></span>
-                    <span class="marker__3"></span>
-                    <span class="marker__4"></span>
-                </div>
-            </div>
-            <!-- the dayly circle -->
-            <!-- <div class="circle">
-                <span class="circle__btn"></span>
-                <span class="circle__back-1"></span>
-                <span class="circle__back-2"></span>
-            </div> -->
+<div class="wraper">
+   
+    <div class="clock">
+        <div class="hand hours"></div>
+        <div class="hand minutes"></div>
+        <div class="hand seconds"></div>
+        <div class="point"></div>
+        <div class="marker">
+            <span class="marker__1"></span>
+            <span class="marker__2"></span>
+            <span class="marker__3"></span>
+            <span class="marker__4"></span>
+        </div>
+    </div>
 
-            <div class="icon" id="Gsteps">
-                <!-- <div class="icon__home">
-                    <p>1</p><br><br><br><br>
-                </div> -->
-            </div>
-        <!-- </div>
-    </div> -->
+    <div class="container">
+        <div class="clock-column">
+            <p class="clock-day clock-timer"></p>
+            <p class="clock-label">Days</p>
+        </div>
+
+        <div class="clock-column">
+            <p class="clock-hours clock-timer"></p>
+            <p class="clock-label">Hours</p>
+        </div>
+
+        <div class="clock-column">
+            <p class="clock-minutes clock-timer"></p>
+            <p class="clock-label">Minutes</p>
+        </div>
+
+        <div class="clock-column">
+            <p class="clock-seconds clock-timer"></p>
+            <p class="clock-label">Seconds</p>
+        </div>
+    </div>
+    <br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br>
+</div>
+<button></button>
+    <div class="icon" id="Gsteps"></div>
     <script src="js/deco.js"></script>
     <script src="js/index.js"></script>
     <script src="js/timer.js"></script>
