Adding a recording page and arranging dates

--- a/index.html
+++ b/index.html
@@ -4,58 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mazaltov!🎉</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/timer.css">
     <link rel="stylesheet" href="style/deco.css">
 </head>
 
 <body>
-<div class="wraper">
-   
-    <div class="clock">
-        <div class="hand hours"></div>
-        <div class="hand minutes"></div>
-        <div class="hand seconds"></div>
-        <div class="point"></div>
-        <div class="marker">
-            <span class="marker__1"></span>
-            <span class="marker__2"></span>
-            <span class="marker__3"></span>
-            <span class="marker__4"></span>
+    <div class="wraper">
+        <div class="clock">
+            <div class="hand hours"></div>
+            <div class="hand minutes"></div>
+            <div class="hand seconds"></div>
+            <div class="point"></div>
+            <div class="marker">
+                <span class="marker__1"></span>
+                <span class="marker__2"></span>
+                <span class="marker__3"></span>
+                <span class="marker__4"></span>
+            </div>
         </div>
+
+        <div class="container">
+            <div class="clock-column">
+                <p class="clock-day clock-timer"></p>
+                <p class="clock-label">Days</p>
+            </div>
+
+            <div class="clock-column">
+                <p class="clock-hours clock-timer"></p>
+                <p class="clock-label">Hours</p>
+            </div>
+
+            <div class="clock-column">
+                <p class="clock-minutes clock-timer"></p>
+                <p class="clock-label">Minutes</p>
+            </div>
+
+            <div class="clock-column">
+                <p class="clock-seconds clock-timer"></p>
+                <p class="clock-label">Seconds</p>
+            </div>
+        </div>
+        <br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
     </div>
-
-    <div class="container">
-        <div class="clock-column">
-            <p class="clock-day clock-timer"></p>
-            <p class="clock-label">Days</p>
-        </div>
-
-        <div class="clock-column">
-            <p class="clock-hours clock-timer"></p>
-            <p class="clock-label">Hours</p>
-        </div>
-
-        <div class="clock-column">
-            <p class="clock-minutes clock-timer"></p>
-            <p class="clock-label">Minutes</p>
-        </div>
-
-        <div class="clock-column">
-            <p class="clock-seconds clock-timer"></p>
-            <p class="clock-label">Seconds</p>
-        </div>
-    </div>
-    <br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br>
-</div>
-<button></button>
+    <button></button>
     <div class="icon" id="Gsteps"></div>
     <script src="js/deco.js"></script>
     <script src="js/index.js"></script>
     <script src="js/timer.js"></script>
+    <!-- <script src="js/music.js"></script> -->
 </body>
 
 </html>
