--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/timer.css">
     <link rel="stylesheet" href="style/deco.css">
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
