Check your email

--- a/html/enter.html
+++ b/html/enter.html
@@ -39,6 +39,38 @@
                 <span>m</span>
             </div>
             <div class="row">
+                <span>c</span>
+                <span>h</span>
+                <span>e</span>
+                <span>c</span>
+                <span>k</span>
+                <span>-</span>
+                <span>yo</span>
+                <!-- <span>o</span> -->
+                <span>ur</span>
+                <!-- <span>r</span> -->
+                <span>-</span>
+                <span>em</span>
+                <!-- <span>m</span> -->
+                <span>a</span>
+                <span>i</span>
+                <span>l</span>
+            </div>
+            <div class="row">
+                <span>i</span>
+                <span>n</span>
+                <span>-</span>
+                <span>10</span>
+                <span>-</span>
+                <span>m</span>
+                <span>i</span>
+                <span>n</span>
+                <span>u</span>
+                <span>t</span>
+                <span>e</span>
+                <span>s</span>
+            </div>
+            <!-- <div class="row">
                 <span>t</span>
                 <span>h</span>
                 <span>e</span>
@@ -49,7 +81,6 @@
                 <span>l</span>
                 <span>y</span>
             </div>
-            <!-- The daily experience -->
             <div class="row">
                 <span>E</span>
                 <span>x</span>
@@ -61,7 +92,7 @@
                 <span>n</span>
                 <span>c</span>
                 <span>e</span>
-            </div>
+            </div> -->
         </div>
     </div>
 
