--- a/html/enter.html
+++ b/html/enter.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../pic/לוגו כוכב.png">
     <!-- <link rel="icon" type="image/x-icon" href="../"> -->
     <link rel="stylesheet" href="../style/enter.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -19,8 +20,8 @@
     <canvas id="canvas"></canvas>
     <div id="sea"></div>
     <div id="beach"></div>
-    <img src="https://dl.dropbox.com/s/2k0mtrxc2dqurmh/jumping.png" alt="jumping-people" id="people" />
-    <img src="https://dl.dropbox.com/s/zoftkmdxyyqr8ce/belair.png" alt="jumping-people" id="car" />
+    <img src="../pic/jumping.png" alt="jumping-people" id="people" />
+    <img src="../pic/belair.png" alt="jumping-people" id="car" />
 
     <div id="merrywrap" class="merrywrap">
         <div class="giftbox">
@@ -38,7 +39,7 @@
                 <span>a</span>
                 <span>m</span>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <span>c</span>
                 <span>h</span>
                 <span>e</span>
@@ -46,12 +47,9 @@
                 <span>k</span>
                 <span>-</span>
                 <span>yo</span>
-                <!-- <span>o</span> -->
                 <span>ur</span>
-                <!-- <span>r</span> -->
                 <span>-</span>
                 <span>em</span>
-                <!-- <span>m</span> -->
                 <span>a</span>
                 <span>i</span>
                 <span>l</span>
@@ -69,8 +67,8 @@
                 <span>t</span>
                 <span>e</span>
                 <span>s</span>
-            </div>
-            <!-- <div class="row">
+            </div> -->
+            <div class="row">
                 <span>t</span>
                 <span>h</span>
                 <span>e</span>
@@ -92,7 +90,7 @@
                 <span>n</span>
                 <span>c</span>
                 <span>e</span>
-            </div> -->
+            </div>
         </div>
     </div>
 
