--- a/html/memoryGame.html
+++ b/html/memoryGame.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/cefb24f359.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <h1>✨משחק זוגות✨</h1>
     <div id="score-panel">
         <ul class="stars">
             <li><i class="fa fa-star"></i></li>
